# thermal_camera_driver

./: Readme.md
IR_02/USB_Linux_SDK_20220831/IRCameraDemo/: ARCameraDemo.pro.user.545492f.4.8-pre1  ARCameraDemo.pro.user.d9caddc  ARCameraDemo.pro.user.f2cc1db  CMakeLists.txt  IR.code-workspace  IRCameraDemo.pro  IRCameraDemo.pro.user.23b0cea.22  IRCameraDemo.pro.user.4eb0cfd.4.8-pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udevhelper.c  udevhelper.h  util.cpp  util.h
IR_02/USB_Linux_SDK_20220831/IRCameraDemo/uvc/: ircammanager.h
IR_02/USB_Linux_SDK_20220831/SDK/uvc/: ircammanager.h
IR_02/USB_Linux_SDK_20220831/output/: IRCameraDemo  lib_copy_qt.sh  libopencv_core.so.3.2  libopencv_imgproc.so.3.2
Img_transport_ws/devel/: .catkin
Img_transport_ws/devel/lib/learn_img_transport/: image_listener  image_publisher  learn_img_transport
Img_transport_ws/devel/lib/pkgconfig/: learn_img_transport.pc
Img_transport_ws/devel/share/learn_img_transport/cmake/: learn_img_transportConfig.cmake
Img_transport_ws/src/learn_img_transport/: CMakeLists.txt
Img_transport_ws/src/learn_img_transport/launch/: thermalpub.launch
Img_transport_ws/src/learn_img_transport/rviz/: rgbt.rviz
Img_transport_ws/src/learn_img_transport/src/: image_publisher.cpp  image_subscriber.cpp
ir_backup/sub_build/: CMakeCache.txt  Makefile  Video_Capture  cmake_install.cmake
ir_backup/sub_src/: CMakeLists.txt  video_capture.cpp
